--- a/changelog/breaking-migration/breaking-changes.mdx
+++ b/changelog/breaking-migration/breaking-changes.mdx
@@ -1,166 +1,205 @@
 ---
-title: "Breaking Changes"
-description: "Review a curated list of breaking changes that may impact existing projects, including language standard requirements, removed APIs, and significant behavioral modifications. Each entry offers upgrade guidance and practical migration tips."
+title: "Breaking Changes & Deprecations"
+description: "Detailed explanations of breaking API changes, removed or deprecated features, and context around why each change was made. Users understand risk and required actions before upgrading."
 ---
 
-# Breaking Changes
+# Breaking Changes & Deprecations
 
-Welcome to the Breaking Changes documentation page. Here you will find a carefully curated list of significant changes within GoogleMock that may impact your existing projects. This page highlights alterations to language standards, removed APIs, and major behavioral modifications that require your attention when upgrading.
-
-Our goal is to empower you with clear upgrade guidance and practical migration tips, so you can smoothly adapt your tests and mocks to the newest versions.
-
----
-
-## Understanding Breaking Changes
-
-Breaking changes are modifications that may cause your existing test code or mocks to fail to compile or behave differently if not updated accordingly. We provide detailed descriptions of each breaking change below, along with actionable steps to help you successfully migrate your code.
+This page outlines important **breaking API changes**, **deprecated features**, and **removed functionalities** within GoogleTest. Its purpose is to help users understand potential risks and required actions before upgrading their test code and framework versions. By clearly communicating these changes, you can plan migrations with confidence and avoid surprises during integration.
 
 ---
 
-## Key Categories of Breaking Changes
+## 1. Overview of Breaking Changes
 
-### 1. Language Standard Requirements
+When upgrading GoogleTest to a newer version, you may encounter changes that **alter or remove existing APIs** or behaviors. These could cause your tests to fail to compile or behave differently at runtime.
 
-Starting from version 1.17.x, GoogleTest and GoogleMock require a minimum of C++17 support. This means:
+This page focuses on these core areas:
 
-- Ensure your compiler and build system are configured to use at least the C++17 standard.
-- Code that relies on earlier standards might fail to compile or produce unexpected behaviors.
+- **API breaking changes:** Modifications to test macros, assertions, or fixture behavior that require code adjustments.
+- **Deprecated features:** APIs or usages that are discouraged and will be removed in future releases.
+- **Removed features:** APIs or test components eliminated from the framework.
 
-**Migration Tip:** Update your build flags (e.g., `-std=c++17` for GCC/Clang or `/std:c++17` for MSVC). Confirm your environment supports C++17 before upgrading.
+Before upgrading, it is imperative to review and understand these to ensure your test suites run smoothly.
 
 ---
 
-### 2. Removal of Legacy `MOCK_METHODn` Macros
+## 2. Breaking Changes Detected
 
-The older `MOCK_METHODn` and `MOCK_CONST_METHODn` macros have been deprecated and removed in favor of the new unified `MOCK_METHOD` macro syntax.
+### a. Restrictions on Test Suite and Test Names
 
-**Impact:**
+GoogleTest reserves the underscore (`_`) character for internal use in test suite and test names. This means:
 
-- Existing mock classes using `MOCK_METHODn` will no longer compile.
+- **Test suite names and test names must NOT contain underscores (`_`).**
+- Underscores appearing at the start or end of names are especially problematic as they produce invalid identifiers internally.
 
-**Action Steps:**
+If you violate this rule, your test classes may be generated with conflicting or reserved names, resulting in compilation errors or unexpected behavior. For simplicity and future compatibility, avoid `_` altogether in `TEST()` and `TEST_F()` names.
 
-- Replace:
+<Callout title="Example of problematic name usage">
+```cpp
+// Avoid names with underscores:
+TEST(Time, Flies_Like_An_Arrow) { ... }  // discouraged
+TEST(TimeFlies, LikeAnArrow) { ... }   // preferred
+```
+</Callout>
 
-  ```cpp
-  MOCK_METHOD1(Foo, bool(int));
-  MOCK_CONST_METHOD1(Bar, int(const std::string&));
-  ```
+For details and rationale, see the [FAQ entry on underscores in test names](docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore).
 
-  with:
+---
 
-  ```cpp
-  MOCK_METHOD(bool, Foo, (int));
-  MOCK_METHOD(int, Bar, (const std::string&), (const));
-  ```
+### b. ASSERT and EXPECT Macros with `NULL` Arguments
 
-- For functions with complex argument types containing commas, wrap the argument types with extra parentheses or use type aliases to keep the macro syntax valid.
+While historically GoogleTest supported `EXPECT_EQ(NULL, ptr)` and `ASSERT_EQ(NULL, ptr)`, it does **not** fully support `EXPECT_NE(NULL, ptr)` or `ASSERT_NE(NULL, ptr)` due to C++ template limitations.
 
-For example:
+- **Recommendation:** Use `nullptr` instead of `NULL` for pointer comparisons. For example:
 
 ```cpp
-MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-// or
-using BoolIntPair = std::pair<bool, int>;
-MOCK_METHOD(BoolIntPair, GetPair, ());
+EXPECT_EQ(ptr, nullptr);
+EXPECT_NE(ptr, nullptr);
 ```
+
+This syntax is safer, more modern, and free of the limitations associated with `NULL`.
+
+For additional guidance, see the detailed explanation in the [FAQ](docs/faq.md#why-does-google-test-support-expect_eqnull-ptr-but-not-expect_ne-null-ptr).
 
 ---
 
-### 3. Changes in Mock Method Qualifiers
+### c. Test Fixture Derived Classes and Same Test Suite Names
 
-Some methods that were previously mocked with certain qualifiers now require explicit specification.
+GoogleTest enforces that **all tests in a test suite use the same test fixture class**. This means:
 
-For example:
+- Mixing `TEST` and `TEST_F` with the same test suite name is illegal.
+- Defining derived fixtures sharing the same test suite name is prohibited.
 
-- If you override a const method, you must specify `(const, override)` as the last argument to `MOCK_METHOD`.
+If violated, the framework reports runtime errors specifying that test fixtures conflict within the same suite.
 
-- Similarly, for `noexcept` or other qualifiers like `Calltype(...)`, use the fourth parameter to declare them.
-
-**Example:**
+<Callout title="How to safely share fixture logic">
+You can share test fixture logic implicitly by inheriting from a base fixture and defining separate fixtures with different names for use in different tests:
 
 ```cpp
-MOCK_METHOD(int, GetValue, (), (const, noexcept, override));
+class BaseTest : public ::testing::Test { ... };
+
+class DerivedTest1 : public BaseTest { ... };
+class DerivedTest2 : public BaseTest { ... };
+
+TEST_F(DerivedTest1, TestName) { ... }
+TEST_F(DerivedTest2, TestName) { ... }
 ```
 
-**Migration Tip:** Review your mock class declarations for such qualifier usage and update accordingly.
+Using this approach avoids naming conflicts.
+</Callout>
+
+For full details, see [FAQ entry on deriving fixtures and test suite names](docs/faq.md#Can-I-derive-a-test-fixture-from-another).
 
 ---
 
-### 4. Default Behavior and Warning Policies
+### d. `RUN_ALL_TESTS()` Return Value Usage
 
-By default, calls to mock methods without explicit `EXPECT_CALL`s generate warnings. To adjust this behavior:
-
-- Use `NiceMock<T>` to suppress warnings on uninteresting calls.
-- Use `StrictMock<T>` to treat uninteresting calls as errors.
-
-**Note:**
-
-In version 1.17.x and later, the default mock behavior aligns with `NaggyMock`, which issues warnings.
-
-**Tips:**
-
-- Prefer using `ON_CALL()` to define default behaviors without setting strict expectations.
-- Use `EXPECT_CALL()` with `.Times(AnyNumber())` for excluding warnings on specific methods.
-
----
-
-### 5. Enhanced Support for Move-Only Types
-
-GoogleMock now fully supports mocking methods that accept or return move-only types such as `std::unique_ptr`. This change may affect existing mocking strategies.
-
-**Migration Advice:**
-
-- Use the standard `MOCK_METHOD` macro for such methods.
-- When returning move-only types, use lambdas or callable objects in `.WillOnce()` or `.WillRepeatedly()` to generate fresh instances each call.
-
-For example:
+GoogleTest now requires that the return value of `RUN_ALL_TESTS()` is used, typically as the return value of `main()`:
 
 ```cpp
-EXPECT_CALL(mock, MakeBuzz(_))
-    .WillRepeatedly([](StringPiece text) {
-      return std::make_unique<Buzz>(AccessLevel::kInternal);
-    });
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
----
+Ignoring the return value will now generate a compilation error on some compilers because it breaks proper test status reporting.
 
-## Practical Migration Recommendations
+Failing to do this may cause your test runs to incorrectly report success, even if some tests failed.
 
-- Update your project to compile with C++17 or newer.
-- Replace all deprecated `MOCK_METHODn` macro usages with the modern `MOCK_METHOD` syntax.
-- Review mocked method qualifiers and specify `const`, `override`, `noexcept`, and `Calltype(...)` correctly.
-- Adjust your test mocks with `NiceMock` or `StrictMock` to handle uninteresting calls as desired.
-- Refactor mocks involving move-only types to use lambdas or appropriate callable actions.
-- Verify expectations precede any code execution that calls mocks to avoid undefined behavior.
+See [FAQ entry on ignoring `RUN_ALL_TESTS()` return value](docs/faq.md#My-compiler-complains-about-ignoring-return-value-when-I-call-run_all_tests) for more.
 
 ---
 
-## Common Pitfalls and Troubleshooting
+## 3. Deprecation Notices
 
-- **Missing C++17 support:** Tests may fail to compile; verify compiler flags.
-- **Incorrect macro syntax:** Commas in argument or return types can cause compilation errors; wrap these types in parentheses or use type aliases.
-- **Unspecified qualifiers:** Mock methods must specify qualifiers (`const`, `override`) matching the base class.
-- **Unexpected warnings or errors on uninteresting calls:** Use `NiceMock` or add catch-all `EXPECT_CALL`s.
+### a. Legacy Test Case vs Test Suite API
 
----
+GoogleTest is moving from the old `TestCase` terminology to `TestSuite`. While `TestCase`-based APIs are still available for compatibility,
+new code should use test suite APIs instead.
 
-## Additional Resources
+- Legacy API usage may generate deprecation warnings.
+- Refer to the new API in the [Test Lifecycle and Environment Control](api-reference/core-test-api/test-lifecycle-and-environment.md).
 
-For comprehensive guidance on using mocks, setting expectations, and leveraging GoogleMock effectively, please refer to:
+### b. `TEST_CASE` Macro
 
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes and best practices for using mocks.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Detailed API references for mocks and expectations.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Introduction and beginner-friendly tutorial.
-- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html): Built-in matchers for flexible argument matching.
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html): Introduction to basic usage.
+The older `TEST_CASE` macro is deprecated. Use `TEST` or `TEST_F` to define tests instead.
 
 ---
 
-By carefully following the recommendations above, your migration to the latest GoogleMock versions will be smooth and your tests remain robust and maintainable.
+## 4. Removal of Features
 
-If you encounter any issues, please consult the [Common Troubleshooting page](../getting-started/troubleshooting-support/common-troubleshooting), or reach out through community forums and issue trackers.
+### a. Removal of Support for Static const Data Member Definitions Without Out-of-Class Definition
 
-Happy Testing!
+GoogleTest follows correct C++ rules requiring that **static const integral members must be defined outside the class body if they are odr-used**.
+
+If you previously relied on omitting the out-of-class definition, expect compilation or link errors. Define static members as follows:
+
+```cpp
+class Foo {
+  static const int kBar = 100;
+};
+
+const int Foo::kBar;  // Required definition.
+```
+
+For `constexpr` static members, no separate definition is needed.
+
+See [FAQ on undefined references to static members](docs/faq.md#The-compiler-complains-about-undefined-references-to-some-static-const-member-variables-but-I-did-define-them-in-the-class-body).
 
 ---
+
+### b. Fix for `EXPECT_EQ` Using Macros as Arguments
+
+`EXPECT_EQ(htonl(blah), blah_blah)` may generate compiler errors in optimized mode due to `htonl()` defined as a macro on some platforms.
+
+This is a known platform issue rather than GoogleTest bug. The workaround is to avoid placing problematic macros inside `EXPECT_EQ` directly.
+
+---
+
+## 5. Migration Tips and Required Actions
+
+To smoothly upgrade:
+
+- **Review your test names:** Remove or replace underscores in test suite and test names.
+- **Replace `NULL` with `nullptr` for pointer assertions.**
+- **Ensure consistent fixture use within test suites:** Avoid mixing `TEST` and `TEST_F` in the same suite.
+- **Use the return value of `RUN_ALL_TESTS()` correctly,** ensure it propagates in your `main()`.
+- **Add out-of-class definitions for static const members** where necessary.
+
+Failure to comply may lead to compilation failures, runtime errors, or unreliable test results.
+
+---
+
+## 6. Additional Considerations
+
+### Death Tests
+
+- Recommended to name death test suites ending with `*DeathTest` to help GoogleTest run them prior to normal tests, ensuring isolation.
+- See [Advanced Topics: Death Tests](guides/core-test-workflows/death-tests-error-handling.md) for detailed migration and configuration guidance.
+
+### Thread-Safety and Sharding
+
+Keeping consistent test suite fixture usage and avoiding underscores help maintain compatibility with advanced features like test sharding and thread-safe death tests.
+
+---
+
+## 7. References and Further Reading
+
+- [FAQ on Test Names and Underscores](docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore)
+- [FAQ on ASSERT/EXPECT with NULL](docs/faq.md#why-does-google-test-support-expect_eqnull-ptr-but-not-expect_ne-null-ptr)
+- [FAQ on Fixture Derivation and Test Suites](docs/faq.md#Can-I-derive-a-test-fixture-from-another)
+- [FAQ on RUN_ALL_TESTS() Return Value](docs/faq.md#My-compiler-complains-about-ignoring-return-value-when-I-call-run_all_tests)
+- [Assertions Reference](docs/reference/assertions.md)
+- [Advanced Topics on Death Tests](guides/core-test-workflows/death-tests-error-handling.md)
+
+---
+
+By reviewing these breaking changes and deprecations carefully, you will be empowered to maintain reliable, performant, and forward-compatible test suites in GoogleTest.
+
+
+---
+
+<Note>
+This document concentrates on user-facing API changes and deprecations relevant to writing and running tests with the GoogleTest framework. It does not cover unrelated internal refactorings or performance optimizations that do not affect test authors directly.
+</Note>
